# check_network

./: .gitignore  README.md  pyproject.toml
check_network/: check_network.py  check_network.yml
launchctl/: local.check_network.start.plist  local.check_network.switch-log-file.plist
